--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.6",
+    "click-outside-vue3": "^4.0.1",
     "lucide-vue-next": "^0.475.0",
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
