--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.10.1",
     "@tailwindcss/vite": "^4.0.6",
     "click-outside-vue3": "^4.0.1",
+    "firebase": "^11.3.1",
     "lucide-vue-next": "^0.475.0",
     "nuxt": "^3.15.4",
     "pinia": "^3.0.1",
