--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue3-toastify": "^0.2.8"
   }
 }
